[package]
name = "brimstone"
version = "3.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.8.0" }
colored = "2.0.4"
inquire = "0.6.2"
toml = "0.8.6"
serde = { version = "1.0.190", features = ["derive"] }
serde-xml-rs = "0.6.0"
anyhow = "1.0.75"
color-eyre = "0.6.2"
device_query = "1.1.3"
rand = "0.8.5"
select = "0.6.0"
ctrlc = "3.4.1"
